# meetpulse-desktop

./: .env.example  .gitignore  README.md  cleanup_css.cjs  dev-web.cmd  dev-web.ps1  dev.ps1  doc.md  eslint.config.js  fix_colors.cjs  fix_css.cjs  index.html  package-lock.json  package.json  refactor_css.cjs  tailwind.config.ts
docs/: architecture.md  native-audio-roadmap.md  test-plan-checklist.md  windows-application-control.md
src/: main.tsx  styles.css  theme.css
src-tauri/: Cargo.toml  build.rs  config.example.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: site.webmanifest
src-tauri/src/: api_client.rs  app_state.rs  audio.rs  auth.rs  commands.rs  config.rs  finalizer.rs  hotkey.rs  lib.rs  main.rs  manifest.rs  native_audio.rs  notifications.rs  oauth_success.html  paths.rs  recorder.rs  recovery.rs  storage.rs  tray.rs  wav_writer.rs
src/hooks/: useAudioMeters.ts  useLiveDuration.ts
src/lib/: format.ts
src/store/: authStore.ts  recorderStore.ts
src/tauri/: commands.ts  window.ts
src/ui/: App.tsx  Login.tsx
src/ui/components/layout/: AudioFocusView.tsx  CompactWidget.tsx  DetailsPanel.tsx  LibrarySidebar.tsx  PlayerBar.tsx  SettingsPanel.tsx  WindowTitlebar.tsx
src/ui/components/markdown/: MarkdownBlock.tsx
src/ui/components/recorder/: ControlButton.tsx  DeviceSelect.tsx  LegacyRecorder.tsx  MiniButton.tsx  SignalIcon.tsx  TrackWave.tsx
src/ui/lib/: appStorage.ts  audioLibrary.ts  audioTypes.ts  clipboard.ts  cloudLibrary.ts  dateFormat.ts  libraryConstants.ts  markdown.ts  recordingUi.ts  transcription.ts
