[package]
name = "meetings-assistant-recorder"
version = "1.0.0"
description = "Asistente de reuniones con grabación de audio y transcripción IA - Desarrollado por Vicente Jorquera"
authors = ["Vicente Jorquera"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "meetings_assistant_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
cpal = { version = "0.15", optional = true }
directories = "5"
opus = { version = "0.3", optional = true }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
wasapi = { version = "0.15", optional = true }
windows = { version = "0.61.3", features = ["Data_Xml_Dom", "UI_Notifications", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[features]
default = ["native-audio"]
mock-audio = []
native-audio = ["dep:cpal", "dep:opus", "dep:wasapi"]

[profile.release]
console = false
strip = true
lto = true
